<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/new_crime"
        android:icon="@drawable/ic_menu_add"
        android:title="@string/new_crime"
        app:showAsAction="ifRoom|withText"/>

    <item
        android:id="@+id/empty"
        android:title="Options"
        android:orderInCategory="101"
        app:showAsAction="always"
        android:icon="@drawable/ic_moreoptions">

        <menu>

            <item android:id="@+id/show_archived"
                android:title="@string/show_archived"
                app:showAsAction="ifRoom"/>

            <item android:id="@+id/sort_by"
                android:title="@string/sort_by"
                app:showAsAction="ifRoom"/>

            <item android:id="@+id/export_csv"
                android:title="@string/export_csv"
                app:showAsAction="ifRoom"/>

            <item android:id="@+id/import_csv"
                android:title="@string/import_csv"
                app:showAsAction="ifRoom"/>

        </menu>

    </item>

</menu>